--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -265,6 +265,12 @@
 "~^/william-pickard$" "/doc/darknet-market/william-pickard/index";
 "~^/willpower$" "/doc/psychology/willpower/index";
 "~^/zeami$" "/doc/japan/poetry/zeami/index";
+"~^/agreeableness$" "/doc/psychology/personality/agreeableness/index";
+"~^/extraversion$" "/doc/psychology/personality/extraversion/index";
+"~^/neuroticism$" "/doc/psychology/personality/neuroticism/index";
+"~^/openness$" "/doc/psychology/personality/openness/index";
+"~^/astronomy$" "/doc/science/physics/astronomy/index";
+"~^/physics$" "/doc/science/physics/index";
 
 ## literal matches:
 "~^//$" "/";
@@ -17141,11 +17147,11 @@
 "~^/ttps://gwern.net/notes/Small-groups$" "/notes/small-groups";
 "~^/qs$" "/index#qs";
 "~^/StarWars/$" "https://old.reddit.com/r/StarWars/";
-"~^/Colder$" "/colder-wars";
-"~^/Colder-Wars/$" "/colder-wars";
-"~^/Colder-wars$" "/colder-wars";
-"~^/colder-Wars$" "/colder-wars";
-"~^/Colder-Wars\?.*$" "/colder-Wars";
+"~^/Colder$" "/colder-war";
+"~^/Colder-Wars/$" "/colder-war";
+"~^/Colder-wars$" "/colder-war";
+"~^/colder-Wars$" "/colder-war";
+"~^/Colder-Wars\?.*$" "/colder-war";
 "~^/Holy-wars\?s=09$" "/holy-wars";
 "~^/holy-wars\?source=techstories.org$" "/holy-wars";
 "~^/Holy-wars\?source=techstories.org$" "/holy-wars";
@@ -19355,7 +19361,6 @@
 "~^/note/IQ$" "/doc/iq/ses/index";
 "~^/doc/ses$" "/doc/iq/ses/index";
 "~^/iq/ses$" "/doc//iq/ses/index";
-"~^/doc/index/iq/ses.*$" "/doc/iq/ses/index";
 "~^/doc/sociology/abandoned$" "/doc/sociology/abandoned-footnotes/index";
 "~^/Abandon$" "/doc/sociology/abandoned-footnotes/index";
 "~^/doc/statistics/bayes/%C3%83%C2%B0$" "/doc/statistics/bayes/index";
@@ -20278,7 +20283,7 @@
 "~^/doc/biology/conferences/vienna99/aidsinzimbabwe.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/conferences/vienna99/aidsinzimbabwe.html";
 "~^/doc/biology/clinmgt/pediatrics/globalstratabst.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/clinmgt/pediatrics/globalstratabst.html";
 "~^/doc/ai/2022-11-02-anthropic-constitutionalhierarchies\.pdf.*$" "https://www.anthropic.com/research/constitutional-ai-harmlessness-from-ai-feedback";
-"~^/colder-Wars\?.*$" "/colder-wars";
+"~^/colder-Wars\?.*$" "/colder-war";
 "~^/blog/wp-.*$" "/blog/index";
 "~^/blog/2024-openaimojo$" "/blog/2024-openai-mojo";
 "~^/blog/2024-opena-imojo$" "/blog/2024-openai-mojo";
@@ -20312,6 +20317,23 @@
 "~^/Numbers-kun$" "https://forum.evageeks.org/search.php?author_id=5422&sr=posts";
 "~^/feeds.opml$" "/doc/personal/rss-subscriptions.opml";
 "~^/doc/biology/confppidx.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/confidx.html";
+"~^/doc/nav_search.gif$" "/404";
+"~^/search-casestudy$" "/search-case-studies";
+"~^/search-case-study$" "/search-case-studies";
+"~^/search-casestudies$" "/search-case-studies";
+"~^/search-case$" "/search-case-studies";
+"~^/doc/psychology/okcupid/QMh.*$" "/doc/psychology/okcupid/index";
+"~^/health$" "/doc/biology/index";
+"~^/\.za.*$" "/index";
+"~^/metadata/thumbnail/256px//doc/ai/nn/transformer/gpt/dall-e/3/2024-09-14-gwern-dalle3-twolaughingcryingemoji.jpg$" "/doc/ai/nn/transformer/gpt/dall-e/3/2024-09-14-gwern-dalle3-twolaughingcryingemoji.jpg";
+"~^/bird_amin.gif$" "/doc/rotten.com/library/culture/novelties/dippy-drinking-birds/bird_amin.gif";
+"~^/dbd.jpg$" "/doc/rotten.com/library/culture/novelties/dippy-drinking-birds/dbd.jpg";
+"~^/drinking_girafe.jpg$" "/doc/rotten.com/library/culture/novelties/dippy-drinking-birds/drinking_girafe.jpg";
+"~^/exhibition1.jpg$" "/doc/rotten.com/library/culture/novelties/dippy-drinking-birds/exhibition1.jpg";
+"~^/mediumbird.jpg$" "/doc/rotten.com/library/culture/novelties/dippy-drinking-birds/mediumbird.jpg";
+"~^/patent.jpg$" "/doc/rotten.com/library/culture/novelties/dippy-drinking-birds/patent.jpg";
+"~^/note/fc/$" "/note/fully-connected";
+"~^/.gf$" "/404";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
