--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -1194,7 +1194,7 @@ default "";
 "~^/Choosing-Software.page" "/choosing-software.md";
 "~^/Clone.page" "/clone.md";
 "~^/Coin-flip.page" "/coin-flip.md";
-"~^/Colder-Wars.page" "/colder-wars.md";
+"~^/Colder-Wars.page" "/colder-war.md";
 "~^/Collecting.page" "/collecting.md";
 "~^/Complement.page" "/complement.md";
 "~^/Complexity-vs-AI.page" "/complexity-vs-ai.md";
@@ -4778,7 +4778,7 @@ default "";
 "~^/Problem-14$" "/problem-14";
 "~^/Subscripts$" "/subscripts";
 "~^/Candy-Japan$" "/candy-japan";
-"~^/Colder-Wars$" "/colder-wars";
+"~^/Colder-Wars$" "/colder-war";
 "~^/Correlation$" "/correlation";
 "~^/Differences$" "/differences";
 "~^/DNM-arrests$" "/dnm-arrests";
@@ -11936,3 +11936,34 @@ default "";
 "~^/doc/psychology/personality/2020-reevy-2.pdf.*$" "/doc/psychology/personality/neuroticism/2020-reevy-2.pdf";
 "~^/doc/psychology/personality/2020-vandenbergh.pdf.*$" "/doc/psychology/personality/neuroticism/2020-vandenbergh.pdf";
 "~^/doc/psychology/personality/2021-ogurlu.pdf.*$" "/doc/psychology/personality/openness/2021-ogurlu.pdf";
+"~^/doc/psychology/personality/2013-watson.pdf.*$" "/doc/psychology/personality/neuroticism/2013-watson.pdf";
+"~^/doc/science/1963-dyson.pdf.*$" "/doc/science/physics/astronomy/1963-dyson.pdf";
+"~^/doc/science/1974-ponnamperuma-interstellarcommunication.pdf.*$" "/doc/science/physics/astronomy/1974-ponnamperuma-interstellarcommunication.pdf";
+"~^/doc/science/1980-press.pdf.*$" "/doc/science/physics/astronomy/1980-press.pdf";
+"~^/doc/economics/1999-04-07-simpson-theingameconomicsofultimaonline.html.*$" "/doc/economics/mechanism-design/1999-04-07-simpson-theingameconomicsofultimaonline.html";
+"~^/doc/science/1924-ogorman.pdf.*$" "/doc/science/physics/1924-ogorman.pdf";
+"~^/doc/science/2023-yao.pdf.*$" "/doc/science/chemistry/2023-yao.pdf";
+"~^/doc/science/1975-bowden.pdf.*$" "/doc/science/physics/1975-bowden.pdf";
+"~^/doc/science/1978-blackford.pdf.*$" "/doc/science/physics/1978-blackford.pdf";
+"~^/doc/science/1979-astin.pdf.*$" "/doc/science/physics/1979-astin.pdf";
+"~^/doc/science/1985-choudhuri.pdf.*$" "/doc/science/physics/1985-choudhuri.pdf";
+"~^/doc/science/1988-radnai-physicsinbudapest.pdf.*$" "/doc/science/physics/1988-radnai-physicsinbudapest.pdf";
+"~^/doc/science/1993-sagan.pdf.*$" "/doc/science/physics/1993-sagan.pdf";
+"~^/doc/science/1993-stuckey.pdf.*$" "/doc/science/physics/1993-stuckey.pdf";
+"~^/doc/science/2001-bacon.pdf.*$" "/doc/science/physics/2001-bacon.pdf";
+"~^/doc/science/2005-goncharov.pdf.*$" "/doc/science/physics/2005-goncharov.pdf";
+"~^/doc/science/2009-adelberger.pdf.*$" "/doc/science/physics/2009-adelberger.pdf";
+"~^/doc/science/2010-bernstein.pdf.*$" "/doc/science/physics/2010-bernstein.pdf";
+"~^/doc/science/2012-borghi.pdf.*$" "/doc/science/physics/2012-borghi.pdf";
+"~^/doc/science/2013-kramer.pdf.*$" "/doc/science/physics/2013-kramer.pdf";
+"~^/doc/science/2018-kaiser.pdf.*$" "/doc/science/physics/2018-kaiser.pdf";
+"~^/doc/science/2019-takahashi.pdf.*$" "/doc/science/physics/2019-takahashi.pdf";
+"~^/doc/science/2020-greaves.pdf.*$" "/doc/science/physics/2020-greaves.pdf";
+"~^/doc/science/2021-rickles.pdf.*$" "/doc/science/physics/2021-rickles.pdf";
+"~^/doc/science/2022-cullen.pdf.*$" "/doc/science/physics/2022-cullen.pdf";
+"~^/doc/science/2022-zsolnaifeher.pdf.*$" "/doc/science/physics/2022-zsolnaifeher.pdf";
+"~^/doc/science/2023-lineweaver.pdf.*$" "/doc/science/physics/2023-lineweaver.pdf";
+"~^/doc/ai/nn/transformer/gpt/codex/2025-elkishky-figure10-o3placesneartopincodeforcesworldwide.png.*$" "/doc/ai/nn/transformer/gpt/codex/2025-elkishky-figure10-o3placesneartopincodeforcesworldwide.jpg";
+"~^/doc/statistics/prediction/2023-atanasov-figure6-1-absolutecorrelationofvariouspredictionperformancecorrelates.png.*$" "/doc/statistics/prediction/2023-atanasov-figure6-1-absolutecorrelationofvariouspredictionperformancecorrelates.jpg";
+"~^/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.png.*$" "/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.jpg";
+"~^/doc/exercise/2009-nemet.pdf.*$" "/doc/exercise/2009-nemet-2.pdf";
