--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11967,3 +11967,8 @@ default "";
 "~^/doc/statistics/prediction/2023-atanasov-figure6-1-absolutecorrelationofvariouspredictionperformancecorrelates.png.*$" "/doc/statistics/prediction/2023-atanasov-figure6-1-absolutecorrelationofvariouspredictionperformancecorrelates.jpg";
 "~^/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.png.*$" "/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.jpg";
 "~^/doc/exercise/2009-nemet.pdf.*$" "/doc/exercise/2009-nemet-2.pdf";
+"~^/doc/science/physics/2023-lineweaver.pdf.*$" "/doc/science/physics/astronomy/2023-lineweaver.pdf";
+"~^/doc/science/physics/1993-sagan.pdf.*$" "/doc/science/physics/astronomy/1993-sagan.pdf";
+"~^/doc/science/physics/1993-stuckey.pdf.*$" "/doc/science/physics/astronomy/1993-stuckey.pdf";
+"~^/doc/science/physics/2020-greaves.pdf.*$" "/doc/science/physics/astronomy/2020-greaves.pdf";
+"~^/doc/science/physics/2022-cullen.pdf.*$" "/doc/science/physics/astronomy/2022-cullen.pdf";
