--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -540,6 +540,7 @@ server {
         rewrite ^/(?<original>.*)undefined$ /$original permanent;
 
         # deal en masse with spam hits from local Reddit archives
+        rewrite ^/AskHistorians/(?<original>.*)$ https://old.reddit.com/r/AskHistorians/$original permanent;
         rewrite ^/.*/r/politics/(?<original>.*)$ https://old.reddit.com/r/politics/$original permanent;
         rewrite ^/CasadastraphobiaENG/(?<original>.*)$ https://old.reddit.com/r/CasadastraphobiaENG/$original permanent;
         rewrite ^/fusion/(?<original>.*)$ https://old.reddit.com/r/fusion/$original permanent;
