--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -271,6 +271,7 @@
 "~^/openness$" "/doc/psychology/personality/openness/index";
 "~^/astronomy$" "/doc/science/physics/astronomy/index";
 "~^/physics$" "/doc/science/physics/index";
+"~^/end-to-end$" "/doc/cs/end-to-end-principle/index";
 
 ## literal matches:
 "~^//$" "/";
@@ -18006,8 +18007,8 @@
 "~^/doc/cat/catnip/survey/2017-08-01$" "/doc/cat/catnip/survey/2017-08-01-gs-reversed.csv";
 "~^/doc/2012-zeo-vitamind.csv$" "/doc/zeo/2012-zeo-vitamind.csv";
 "~^/doc/nootropic/quantified-self/2016-1$" "/doc/nootropic/quantified-self/2016-10-10-magnesium-second.csv";
-"~^/doc/touhou/2013-06-08-acircle-tohoarrangeb$" "/doc/touhou/2013-06-08-acircle-tohoarrange.csv";
-"~^/doc/touhou/2013-06-08-acircle-tohoarrangeb.xz$" "/doc/touhou/2013-06-08-acircle-tohoarrange.csv";
+"~^/doc/touhou/2013-06-08-acircle-tohoarrangeb$" "/doc/touhou/2013-06-08-acircle-tohoarrange.mdb.xz";
+"~^/doc/touhou/2013-06-08-acircle-tohoarrangeb.xz$" "/doc/touhou/2013-06-08-acircle-tohoarrange.mdb.xz";
 "~^/doc/economics/advertising/2019-06-10-1$" "/doc/economics/advertising/2019-06-10-googlesurveys-addislike.csv";
 "~^/doc/economics/advertising/economics/advertising/2019-06-10-googlesurveys-addislike.csv$" "/doc/economics/advertising/2019-06-10-googlesurveys-addislike.csv";
 "~^/doc/2013-google\.csv\"$" "/doc/statistics/2013-google.csv";
@@ -20381,6 +20382,9 @@
 "~^/me.html$" "/me";
 "~^/upshrink.png$" "https://www.primarypurpose.no/wp-content/plugins/forum-server/skins/smooth/images/upshrink.gif";
 "~^/upshrink2.png$" "https://www.primarypurpose.no/wp-content/plugins/forum-server/skins/smooth/images/upshrink2.gif";
+"~^/ICON.*$" "https://en.wikipedia.org/wiki/I-CON";
+"~^/doc/rotten.com/library/designer-vaginas/$" "/doc/rotten.com/library/sex/designer-vaginas/index.html";
+"~^/doc/psychology/okcupid/yourlooksandyo$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25147,7 +25151,7 @@
 "~^/info-dvd.ru.*$" "/404";
 "~^/images\.google.*$" "/404";
 "~^/fearlesshorses.*$" "/404";
-"~^/en.wiki.a51..*$" "/404";
+"~^/en\.wiki\.a51..*$" "/404";
 "~^/dvdmg.com.*$" "/404";
 "~^/urlku.info.*$" "/404";
 "~^/david-h-sculpteur.*$" "/404";
@@ -25761,7 +25765,6 @@
 "~^/fabric-icons.*$" "/404";
 "~^/evernft.*$" "/404";
 "~^/entry.*$" "/404";
-"~^/en.*$" "/404";
 "~^/e8Tk.*$" "/404";
 "~^/doc/nicotine/out.*$" "/404";
 "~^/doc/easyturkeyvisa.*$" "/404";
