--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11972,3 +11972,43 @@ default "";
 "~^/doc/science/physics/1993-stuckey.pdf.*$" "/doc/science/physics/astronomy/1993-stuckey.pdf";
 "~^/doc/science/physics/2020-greaves.pdf.*$" "/doc/science/physics/astronomy/2020-greaves.pdf";
 "~^/doc/science/physics/2022-cullen.pdf.*$" "/doc/science/physics/astronomy/2022-cullen.pdf";
+"~^/doc/science/1905-einstein.pdf.*$" "/doc/science/physics/1905-einstein.pdf";
+"~^/doc/science/1924-compton.pdf.*$" "/doc/science/physics/astronomy/1924-compton.pdf";
+"~^/doc/science/1935-urey.pdf.*$" "/doc/science/chemistry/1935-urey.pdf";
+"~^/doc/science/1958-parkyn.pdf.*$" "/doc/science/physics/astronomy/1958-parkyn.pdf";
+"~^/doc/science/1959-mccall.pdf.*$" "/doc/science/physics/1959-mccall.pdf";
+"~^/doc/science/1961-klein.pdf.*$" "/doc/science/physics/1961-klein.pdf";
+"~^/doc/science/1964-andrade-rutherfordandthenatureoftheatom.pdf.*$" "/doc/science/physics/1964-andrade-rutherfordandthenatureoftheatom.pdf";
+"~^/doc/science/1965-dyson.pdf.*$" "/doc/science/physics/1965-dyson.pdf";
+"~^/doc/science/1965-kepler-keplersconversationwithgalileossiderealmessenger.pdf.*$" "/doc/science/physics/1965-kepler-keplersconversationwithgalileossiderealmessenger.pdf";
+"~^/doc/science/1966-feinberg.pdf.*$" "/doc/science/physics/1966-feinberg.pdf";
+"~^/doc/science/1972-swift.pdf.*$" "/doc/science/physics/1972-swift.pdf";
+"~^/doc/science/1973-drake.pdf.*$" "/doc/science/physics/astronomy/1973-drake.pdf";
+"~^/doc/science/1973-holton-thematicoriginsofscientificthought.pdf.*$" "/doc/science/physics/1973-holton-thematicoriginsofscientificthought.pdf";
+"~^/doc/science/1974-block.pdf.*$" "/doc/science/physics/1974-block.pdf";
+"~^/doc/science/1974-may.pdf.*$" "/doc/science/physics/1974-may.pdf";
+"~^/doc/science/1977-purcell.pdf.*$" "/doc/science/physics/1977-purcell.pdf";
+"~^/doc/science/1977-schaffer.pdf.*$" "/doc/science/physics/astronomy/1977-schaffer.pdf";
+"~^/doc/science/1980-alvarez.pdf.*$" "/doc/science/physics/1980-alvarez.pdf";
+"~^/doc/science/1980-packard.pdf.*$" "/doc/science/physics/1980-packard.pdf";
+"~^/doc/science/1983-edge.pdf.*$" "/doc/science/physics/1983-edge.pdf";
+"~^/doc/science/1985-bartlett.pdf.*$" "/doc/science/physics/astronomy/1985-bartlett.pdf";
+"~^/doc/science/1991-trost.pdf.*$" "/doc/science/chemistry/1991-trost.pdf";
+"~^/doc/science/1994-udias.pdf.*$" "/doc/science/physics/astronomy/1994-udias.pdf";
+"~^/doc/science/1995-matthews.pdf.*$" "/doc/science/physics/1995-matthews.pdf";
+"~^/doc/science/1996-adamson.pdf.*$" "/doc/science/chemistry/1996-adamson.pdf";
+"~^/doc/science/1997-bowden-classicalcomputationcanbecounterfactual.html.*$" "/doc/science/physics/1997-bowden-classicalcomputationcanbecounterfactual.html";
+"~^/doc/science/1997-cava.pdf.*$" "/doc/science/chemistry/1997-cava.pdf";
+"~^/doc/science/1998-galison.pdf.*$" "/doc/science/physics/1998-galison.pdf";
+"~^/doc/science/1999-crum.pdf.*$" "/doc/science/physics/1999-crum.pdf";
+"~^/doc/science/2001-buss.pdf.*$" "/doc/science/physics/2001-buss.pdf";
+"~^/doc/science/2002-hu.pdf.*$" "/doc/science/physics/astronomy/2002-hu.pdf";
+"~^/doc/science/2010-aslaksen.pdf.*$" "/doc/science/physics/astronomy/2010-aslaksen.pdf";
+"~^/doc/science/2014-ma.pdf.*$" "/doc/science/chemistry/2014-ma.pdf";
+"~^/doc/science/2019-tierno.pdf.*$" "/doc/science/chemistry/2019-tierno.pdf";
+"~^/doc/science/2021-casacio.pdf.*$" "/doc/science/physics/2021-casacio.pdf";
+"~^/doc/science/2021-nida.pdf.*$" "/doc/science/chemistry/2021-nida.pdf";
+"~^/doc/science/2023-bures.pdf.*$" "/doc/science/chemistry/2023-bures.pdf";
+"~^/doc/science/2023-klapotke.pdf.*$" "/doc/science/chemistry/2023-klapotke.pdf";
+"~^/doc/science/2023-litina.pdf.*$" "/doc/science/physics/astronomy/2023-litina.pdf";
+"~^/doc/science/2023-taylor.pdf.*$" "/doc/science/physics/2023-taylor.pdf";
