--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -272,6 +272,8 @@
 "~^/astronomy$" "/doc/science/physics/astronomy/index";
 "~^/physics$" "/doc/science/physics/index";
 "~^/end-to-end$" "/doc/cs/end-to-end-principle/index";
+"~^/end-to-end-principle.*$" "/doc/cs/end-to-end-principle/index";
+"~^/energy$" "/doc/psychology/energy/index";
 
 ## literal matches:
 "~^//$" "/";
@@ -20385,6 +20387,8 @@
 "~^/ICON.*$" "https://en.wikipedia.org/wiki/I-CON";
 "~^/doc/rotten.com/library/designer-vaginas/$" "/doc/rotten.com/library/sex/designer-vaginas/index.html";
 "~^/doc/psychology/okcupid/yourlooksandyo$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
+"~^/doc/ai/1986-bennettl\.pdf.*$" "/doc/ai/index";
+"~^/.../transformer/gpt/poetry/2023-elam\.pdf.*$" "/doc/ai/nn/transformer/gpt/poetry/2023-elam.pdf";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -26825,6 +26829,9 @@
 "~^/sersani.*$" "/404";
 "~^/rbh.*$" "/404";
 "~^/ioxi0.*$" "/404";
+"~^/.*/server/preview/.*$" "/404";
+"~^/.*/fileupload.\.php.*$" "/404";
+"~^/webuploader-master/.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
