--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12012,3 +12012,4 @@ default "";
 "~^/doc/science/2023-klapotke.pdf.*$" "/doc/science/chemistry/2023-klapotke.pdf";
 "~^/doc/science/2023-litina.pdf.*$" "/doc/science/physics/astronomy/2023-litina.pdf";
 "~^/doc/science/2023-taylor.pdf.*$" "/doc/science/physics/2023-taylor.pdf";
+"~^/doc/genetics/heritable/2011-simonson.pdf.*$" "/doc/genetics/heritable/2010-simonson.pdf";
