--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20453,6 +20453,13 @@
 "~^/touch-icon-iphone4.png$" "/static/img/logo/logo-favicon-appletouch.png";
 "~^/touch-icon-ipad.png$" "/static/img/logo/logo-favicon-appletouch.png";
 "~^/Story-Of$" "/story-of-your-life";
+"~^/doc/forms/emaillist.html$" "https://web.archive.org/web/20020209100404/forms/emaillist.html";
+"~^/doc/economics/2004-statisticscanada-canadatradewithchina\.pdf.*$" "https://publications.gc.ca/Collection/Statcan/11-624-M/11-624-MIE2004007.pdf#page=2";
+"~^/doc/about/website.html$" "https://web.archive.org/web/20020209100404/about/website.html";
+"~^/doc/about/staff.html$" "https://web.archive.org/web/20020209100404/about/staff.html";
+"~^/doc/about/conferences.html$" "https://web.archive.org/web/20020209100404/about/conferences.html";
+"~^/doc/about/board.html$" "https://web.archive.org/web/20020209100404/about/board.html";
+"~^/doc/about/advocacy2000.html$" "https://web.archive.org/web/20020209100404/about/advocacy2000.html";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
