+; purge apostrophes from WP interwiki links

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -1802,7 +1802,7 @@
 "~^/review/Mead\?utm_.*$" "/review/mead";
 "~^/posts/CH5MvBeHf3uuD2FEr/june-2014-media-thread$" "https://www.lesswrong.com/posts/CH5MvBeHf3uuD2FEr/june-2014-media-thread";
 "~^/TheMotte/comments/l61ku8/cw_lite_thread/$" "https://old.reddit.com/r/TheMotte/comments/l61ku8/cw_lite_thread/";
-"~^/forking-paths.md$" "/forking-path.mad";
+"~^/forking-paths.md$" "/forking-path.md";
 "~^/irc:/irc\.freenode\.net/xmonad$" "irc://irc.libera.chat/xmonad";
 "~^/Spaced-repetitionthe-workload.*$" "/spaced-repetition#the-workload";
 "~^/Research:Vandal_fighter_work_load$" "https://meta.wikimedia.org/wiki/Research:Vandal_fighter_work_load";
@@ -20222,7 +20222,7 @@
 "~^/doc/tolerability/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
 "~^/tolerability/tolerability/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
 "~^/doc/biology/2021-yang-6\.pdf.*$" "/doc/biology/2020-yang-6.pdf";
-"~^/doc/2007-wolfe/$" "/doc/culture/2007-wolfe";
+"~^/doc/2007-wolfe.*$" "/doc/culture/2007-wolfe";
 "~^/doc/schizophrenia/2016-sekar\.pdf.*$" "/doc/genetics/editing/2016-sekar.pdf";
 "~^/doc/psychology/personality/disorder/schizophrenia/2016-sekar\.pdf.*$" "/doc/genetics/editing/2016-sekar.pdf";
 "~^/doc/genetics/heritable/schizophrenia/2016-sekar\.pdf.*$" "/doc/genetics/editing/2016-sekar.pdf";
@@ -20460,6 +20460,60 @@
 "~^/doc/about/conferences.html$" "https://web.archive.org/web/20020209100404/about/conferences.html";
 "~^/doc/about/board.html$" "https://web.archive.org/web/20020209100404/about/board.html";
 "~^/doc/about/advocacy2000.html$" "https://web.archive.org/web/20020209100404/about/advocacy2000.html";
+"~^/the-long-stagnation\?revisio.*$" "/the-long-stagnation";
+"~^/GPT.u00e2.u0080.u00933$" "/gpt-2";
+"~^/fiction/clippyLocat.*$" "/fiction/clippy";
+"~^/doc/statistics/decision/1998-18.*$" "/doc/statistics/decision/1998-akaike.pdf";
+"~^/doc/psychology/spaced-repetition/2017-foer-moonwalkingwitheinstein\.pdf.*$" "http://libgen.li/edition.php?id=4319474";
+"~^/doc/psychology/spaced-repetition/2012-chessdata$" "";
+"~^/doc/psychology/okcupid/yourlooksandyourinbox$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
+"~^/doc/mnemonics/2017-foer\.pdf.*$" "/doc/spaced-repetition/index";
+"~^/doc/japan/history/1937-sadler-themakerofjapan-thelegacyofieyasu\.pdf.*$" "/doc/japan/history/1937-sadler-themakerofmodernjapan-thelegacyofieyasu.pdf";
+"~^/doc/i3.*$" "/doc/index";
+"~^/doc/education/2018-educationpending-revisea.128\.pdf.*$" "/404";
+"~^/doc/economics/1984-axelrod-theevolutionofcooperation-ch4-theliveandletlivesysteminwwi.htm$" "/doc/economics/1984-axelrod-theevolutionofcooperation-ch4-theliveandletlivesysteminwwi.html";
+"~^/doc/culture/amazon-mechanical-turk/2014-peer\.pdf.*$" "/doc/culture/index";
+"~^/doc/crime/terrorism/2011-watson-costofwar\.pdf.*$" "/doc/crime/terrorism/2011-watson-costsofwar.pdf";
+"~^/doc/anime/gwern.net.*$" "/doc/anime/index";
+"~^/doc/allclasses-noframe.html$" "/404";
+"~^/curated/.*$" "/index#notable";
+"~^/contact/report-content.*$" "/contact";
+"~^/%CE%A0$" "/cyoa";
+"~^/Design-graveyard.md$" "/design-graveyard.md";
+"~^/DNBFAQ$" "/dnb-faq";
+"~^/doc/anime/eva/2005-murakam$" "/doc/anime/eva/little-boy/2005-murakami";
+"~^/doc/biology/tolerability/abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
+"~^/doc/biology/tolerability/abt_dintruff.html$" "/doc/biology/2000-iapac-norvir/abt_dintruff.html";
+"~^/doc/biology/tolerability/abt_lichter.html$" "/doc/biology/2000-iapac-norvir/abt_lichter.html";
+"~^/doc/biology/tolerability/abt_sun.html$" "/doc/biology/2000-iapac-norvir/abt_sun.html";
+"~^/doc/biology/tolerability/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/doc/biology/tolerability/farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
+"~^/nav_mainpage.gif$" "/doc/biology/2000-iapac-norvir/nav_mainpage.gif";
+"~^/doc/biology/tolerability/shoofs.html$" "/doc/biology/2000-iapac-norvir/shoofs.html";
+"~^/doc/biology/tolerability/temperature/abt_sum_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_sum_temp1.html";
+"~^/doc/biology/tolerability/temperature/farthingtemp.html$" "/doc/biology/2000-iapac-norvir/temperature/farthingtemp.html";
+"~^/doc/biology/tolerability/urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/doc/biology/tolerability/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/biology/tolerability/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/darknet-market/agora/2014-71.*$" "/doc/darknet-market/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/doc/darknet-market/htt$" "/doc/darknet-market/index";
+"~^/doc/fiction/sc$" "/doc/fiction/science-fiction/index";
+"~^/doc/ig/2018-warne\.pdf.*$" "/doc/iq/2018-warne.pdf";
+"~^/doc/biology/geriatrics/aging/2015-brandhorst\.pdf.*$" "/doc/longevity/fasting/2015-brandhorst.pdf";
+"~^/nootropic/Ads$" "/ads";
+"~^/doc/personal/rss-subscriptions.opm$" "/doc/personal/rss-subscriptions.opml";
+"~^/doc/musicdistraction/2005-lesiuk\.pdf.*$" "/doc/psychology/music/distraction/2005-lesiuk.pdf";
+"~^/doc/math/humor/favicon.ico$" "/favicon.ico";
+"~^/doc/cs/computable/favicon.ico$" "/favicon.ico";
+"~^/doc/statistics/order/script.js$" "/doc/statistics/order/beanmachine-multistage/script.js";
+"~^/doc/tutorial/Jy.*$" "/doc/tutorial/index";
+"~^/forking-path.mad$" "/forking-path.md";
+"~^/homes$" "/index";
+"~^/\$next$" "/index";
+"~^/note/portia$" "/doc/biology/portia/index";
+"~^/newsletter/static/font/SourceSerifPro-BASIC-Bold.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-Bold.ttf";
+"~^/Ethical$" "/tags/philosophy";
+"~^/nootropic/hpmor$" "/hpmor";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
