+; rename preference-falsification -> false-preference for easier tab-completion

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -1029,6 +1029,7 @@ server {
         rewrite ^/(?<old>.*)/guestbook$ /$old/index permanent;
         rewrite ^/doc/music/music-distraction/(?<old>.*)$ /doc/psychology/music/distraction/$old permanent;
         rewrite ^/doc/cs/scheme/(?<old>.*)$ /doc/cs/lisp/scheme/$old permanent;
+        rewrite ^/doc/sociology/preference-falsification/(?<old>.*)$ /doc/sociology/false-preference/$old permanent;
         rewrite ^/(?<before>.*)/1\*(?<after>.*)$ /$before/$after permanent;
         rewrite ^/(?<before>.*)\*(?<after>.*)$   /$before$after  permanent;
         rewrite ^/doc/www/.*\.madasafish.com/artwork/(?<after>.*)$ http://members.madasafish.com/artwork/$after permanent;
