--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -187,7 +187,7 @@
 "~^/poker$" "/doc/reinforcement-learning/imperfect-information/poker/index";
 "~^/portia$" "/doc/biology/portia/index";
 "~^/potassium$" "/doc/nootropic/potassium/index";
-"~^/preference-falsification$" "/doc/sociology/preference-falsification/index";
+"~^/preference-falsification$" "/doc/sociology/false-preference/index";
 "~^/preference-learning$" "/doc/reinforcement-learning/preference-learning/index";
 "~^/probability$" "/doc/statistics/probability/index";
 "~^/progan$" "/doc/ai/nn/gan/stylegan/progan/index";
@@ -10284,7 +10284,7 @@
 "~^/doc/genetics/2014-horowitz\.pdf.*$" "/doc/genetics/heritable/2014-horowitz.pdf";
 "~^/doc/genetics/heritable/2014-horowitz.pdf&cc_key.*$" "/doc/genetics/heritable/2014-horowitz.pdf";
 "~^/2018-horowitz\.pdf.*$" "/doc/economics/2018-horowitz.pdf";
-"~^/doc/sociology/2019horowitz\.pdf.*$" "/doc/sociology/preference-falsification/2019-horowitz.pdf";
+"~^/doc/sociology/2019horowitz\.pdf.*$" "/doc/sociology/false-preference/2019-horowitz.pdf";
 "~^/2019-horowitz\.pdf.*$" "/doc/sociology/2019-horowitz.pdf";
 "~^/1990-horwitz\.pdf.*$" "/doc/statistics/causality/1990-horwitz.pdf";
 "~^/doc/statistics/1990-horwitz\.pdf.*$" "/doc/statistics/causality/1990-horwitz.pdf";
@@ -20514,6 +20514,8 @@
 "~^/newsletter/static/font/SourceSerifPro-BASIC-Bold.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-Bold.ttf";
 "~^/Ethical$" "/tags/philosophy";
 "~^/nootropic/hpmor$" "/hpmor";
+"~^/doc/iq/2014-shulm$" "/doc/iq/2014-shulman.pdf";
+"~^/leprechauns.md$" "/leprechaun.md";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
