--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -274,6 +274,7 @@
 "~^/end-to-end$" "/doc/cs/end-to-end-principle/index";
 "~^/end-to-end-principle.*$" "/doc/cs/end-to-end-principle/index";
 "~^/energy$" "/doc/psychology/energy/index";
+"~^/false-preference$" "/doc/sociology/false-preference/index";
 
 ## literal matches:
 "~^//$" "/";
@@ -18208,7 +18209,7 @@
 "~^/index%E5%BC%80%E5%A7.*$" "/index";
 "~^/indexr98.*$" "/index";
 "~^/index%E2%80%A8.*$" "/index";
-"~^/[0-9]+$" "/index";
+"~^/[0-35-9][1-9][0-35-9][0-9]*$" "/index"; # omit /404
 "~^/1559.*$" "/index";
 "~^/%E2%AF%99$" "/index";
 "~^/%E2%AF%9A$" "/index";
@@ -20516,6 +20517,14 @@
 "~^/nootropic/hpmor$" "/hpmor";
 "~^/doc/iq/2014-shulm$" "/doc/iq/2014-shulman.pdf";
 "~^/leprechauns.md$" "/leprechaun.md";
+"~^/thinkphp.*$" "/404";
+"~^/on-really-trying/.*$" "/on-really-trying";
+"~^/blog/everything-i-know-strategies-tips-and-tricks-for-spaced-repetition-anki$" "https://web.archive.org/web/20200209014707/https://senrigan.io/blog/everything-i-know-strategies-tips-and-tricks-for-spaced-repetition-anki/";
+"~^/ads.md$" "/banner.md";
+"~^/\.hr.*$" "/index";
+"~^/ic$" "/index";
+"~^/resilient-haskell-software.md$" "/resilient-software.md";
+"~^/mlp.md$" "/review/mlp.md";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25768,7 +25777,7 @@
 "~^/sysmgmt/.*$" "/404";
 "~^/amiga-look.*$" "/404";
 "~^/Ajax/.*$" "/404";
-"~^/[0-9]+.sql$" "/404";
+"~^/[0-9]+\.sql$" "/404";
 "~^/.*/preview.php.*$" "/404";
 "~^/.*setHeader.*$" "/404";
 "~^/.*%70%65%6e%73%79%6d%70.*$" "/404";
