+; finish out the color link-icons finally

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20525,6 +20525,44 @@
 "~^/ic$" "/index";
 "~^/resilient-haskell-software.md$" "/resilient-software.md";
 "~^/mlp.md$" "/review/mlp.md";
+"~^/note/elon-musknn$" "/note/elon-musk";
+"~^/entertainment/*$" "/404";
+"~^/%E2%80%8BGPT-3$" "/gpt-3";
+"~^/doc/rotten.com/library/bio/usa/con$" "/doc/rotten.com/library/bio/usa/condoleeza-rice/index.html";
+"~^/GPT-3turing-dialogue$" "/gpt-3#turing-dialogue";
+"~^/%E2%80%8B%E2%80%8BThe-Narrowing-Circle$" "/the-narrowing-circle";
+"~^/%E2%80%8B%E2%80%8BSocks$" "/socks";
+"~^/%E2%80%8B%E2%80%8BN-back-FAQ$" "/dnb-faq";
+"~^/%E2%80%8B%E2%80%8Bmugging$" "/mugging";
+"~^/%E2%80%8B%E2%80%8BModafinil$" "/modafinil";
+"~^/%E2%80%8B%E2%80%8BMnemosyne$" "/spaced-repetition";
+"~^/%E2%80%8B%E2%80%8Blittlewood$" "/littlewood";
+"~^/%E2%80%8B%E2%80%8Bintermittent-fasting$" "/intermittent-fasting";
+"~^/%E2%80%8B%E2%80%8Beverything$" "/everything";
+"~^/%E2%80%8B%E2%80%8Bdocs/%E2%80%8B%E2%80%8B2007-danigelis\.pdf.*$" "/doc/dual-n-back/2007-danigelis.pdf";
+"~^/%E2%80%8B%E2%80%8Bdoc/%E2%80%8B%E2%80%8Bphilosophy/%E2%80%8B%E2%80%8Bepistemology/%E2%80%8B%E2%80%8B1948-oesper\.pdf.*$" "/doc/philosophy/epistemology/1948-oesper.pdf";
+"~^/%E2%80%8B%E2%80%8BDeath-Note-Ending$" "/death-note-ending";
+"~^/%E2%80%8B%E2%80%8BCharity$" "/charity-is-not-about-helping";
+"~^/%E2%80%8B%E2%80%8B2012-election-predictions$" "/2012-election-predictions";
+"~^/doc/design/2023-08-07-gwern-gwernnet-deskt$" "/doc/design/2023-08-07-gwern-gwernnet-desktop-floatingtoc.png";
+"~^/doc/design/2023-04-28-gwern-gwernnet-mobil$" "/doc/design/2023-04-28-gwern-gwernnet-mobile-scrollspyheadertoc.png";
+"~^/doc/darknet-market/2013-05-05-moore-bitcoinexchangesurvivalanalysis-sdatamodcc$" "/doc/darknet-market/2013-05-05-moore-bitcoinexchangesurvivalanalysis-complianceamlcftwhole.csv";
+"~^/doc/culture/2018-micola.pdfcultiu.*$" "/doc/culture/2018-micola.pdf";
+"~^/doc/culture/1963-asimov-sword-of$" "/doc/culture/1963-asimov";
+"~^/doc/cs/2002-deepblue$" "https://en.wikipedia.org/wiki/Deep_Blue_(chess_computer)";
+"~^/doc/ai/deepblue/2002-elsevier-deepblue\.pdf.*$" "https://en.wikipedia.org/wiki/Deep_Blue_(chess_computer)";
+"~^/doc/ai/computer.org.*$" "/doc/ai/index";
+"~^/Danbooru2021\)%E6%95%B0%E6%8D%AE.*$" "/danbooru2021";
+"~^/the-3-grenades.md$" "/3-grenades.md";
+"~^/Bitco$" "/bitcoin-is-worse-is-better";
+"~^/Culture-is-not-about-esthetics.html/.*$" "/culture-is-not-about-esthetics";
+"~^/doc\(history/1912-poole\.pdf.*$" "/doc/history/1912-poole.pdf";
+"~^/doc/73.*$" "/doc/index";
+"~^/doc/businesscard-front-draft.xcf$" "/doc/personal/businesscard-front-draft.xcf";
+"~^/doc/2013-ano$" "/doc/genetics/selection/artificial/2013-anonymous-strategicconsequencesofchineseracism.pdf";
+"~^/google-shutdowns.md$" "/google-shutdown.d";
+"~^/LARPing.md$" "/larping.md";
+"~^/sync-gwern.net.sh/$" "/static/build/sync-gwern.net.sh";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
