--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12017,3 +12017,4 @@ default "";
 "~^/doc/genetics/selection/artificial/2015-gianola.pdf.*$" "/doc/genetics/selection/artificial/2014-gianola.pdf";
 "~^/doc/cs/js/2025-02-21-gwern-gwernnet-404pageguessesintendedurlusingsitemapeditdistance.png.*$" "/doc/cs/js/2025-02-21-gwern-gwernnet-404pageguessesintendedurlusingsitemapeditdistance.jpg";
 "~^/doc/cs/js/2025-02-21-gwern-gwernnet-blog-index.png.*$" "/doc/cs/js/2025-02-21-gwern-gwernnet-blog-index.jpg";
+"~^/doc/statistics/causality/2020-schneider.pdf.*$" "/doc/statistics/causality/2020-schneider-2.pdf";
