+; fix Libreoffice call; rm all '<br />'s as dangerously unpredictable

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -1032,9 +1032,11 @@ server {
         rewrite ^/doc/sociology/preference-falsification/(?<old>.*)$ /doc/sociology/false-preference/$old permanent;
         rewrite ^/(?<before>.*)/1\*(?<after>.*)$ /$before/$after permanent;
         rewrite ^/(?<before>.*)\*(?<after>.*)$   /$before$after  permanent;
-        rewrite ^/doc/www/.*\.madasafish.com/artwork/(?<after>.*)$ http://members.madasafish.com/artwork/$after permanent;
+        rewrite ^/doc/www/.*madasafish.com/(?<after>.*)$ http://members.madasafish.com/$after permanent;
         rewrite ^/doc/www/members.madasafish.com/Location_Location/(?<after>.*)$ http://members.madasafish.com/Location_Location/$after permanent;
         rewrite ^/doc/www/members.madasafish.com/map_of-Hogwarts/(?<after>.*)$ http://members.madasafish.com/map_of-Hogwarts/$after permanent;
+        rewrite ^/(?<before>.*)%E2%80%8B%E2%80%8B(?<after>.*)$ /$before$after permanent;
+        rewrite ^/(?<before>.*)%25252520(?<after>.*)$ /$before-$after permanent;
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
