--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -476,7 +476,7 @@
 # "~^/2017/02$" "/newsletter/2017/02";
 # "~^/2027/02$" "/newsletter/2027/02";
 # "~^/2018/02$" "/newsletter/2018/02";
-"~^/lifehacker-proxy/10-of-the-first-things-you-should.*$" "https://lifehacker.com/10-of-the-first-things-you-should-try-with-chatgpt-1850368802";
+"~^/.*10-of-the-first-things-you-should.*$" "https://lifehacker.com/10-of-the-first-things-you-should-try-with-chatgpt-1850368802";
 # "~^/2019/02$" "/newsletter/2019/02";
 "~^/newsletter2019/02$" "/newsletter/2019/02";
 "~^/doc/modafinil/2017-cope\.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6472902/";
@@ -20563,6 +20563,63 @@
 "~^/google-shutdowns.md$" "/google-shutdown.d";
 "~^/LARPing.md$" "/larping.md";
 "~^/sync-gwern.net.sh/$" "/static/build/sync-gwern.net.sh";
+"~^/The%25252520Melancholy%25252520of%25252520Kyon.*$" "/kyon";
+"~^/Tea\?revisio.*$" "/review/tea";
+"~^/static/img/washingtonpost.svg$" "/static/img/icon/washington-post.svg";
+"~^/static/editor/$" "/404";
+"~^/Self-decrypting%25252520files$" "/self-decrypting-files";
+"~^/On%2525252520Stress$" "/on-stress";
+"~^/On%25252520Stress$" "/on-stress";
+"~^/littleboy/index$" "/doc/anime/eva/little-boy/index";
+"~^/Life%25252520contract$" "/life-contract";
+"~^/ismorphism\?revisio.*$" "/isomorphism";
+"~^/haskell/Wikipedia%25252520Archive%25252520Bot$" "/haskell/wikipedia-archive-bot";
+"~^/haskell-summer-of-code.html$" "/haskell/summer-of-code";
+"~^/google-shutdowns\?source.*$" "/google-shutdown";
+"~^/%E2%80%8B%E2%80%8BAn-Abortion-Dialogue$" "/abortion-dialogue";
+"~^/Drug%2525252520heuristics$" "/drug-heuristic";
+"~^/doc/sorinloov/index$" "/doc/cs/algorithm/sorting/index";
+"~^/doc/rotten.com/library/cryptozoology/jackalopes/jack.jpg$" "/doc/rotten.com/library/cryptozoology/jackalopes/jack.jpg.jpg";
+"~^/doc/psychology/music/distraction/1992-freeburne\.pdf.*$" "/doc/psychology/music/distraction/1952-freeburne.pdf";
+"~^/doc/cs/ai/nn/transformer$" "/doc/cs/ai/nn/transformer/index";
+"~^/doc/bitcoin/1938-peragallo$" "/doc/bitcoin/1938-peragallo-originandevolutionofdoubleentrybookkeeping.pdf";
+"~^/DNB%25252520FAQ$" "/dnb-faq";
+"~^/Death%25252520Note%25252520script$" "/death-note-script";
+"~^/Danbooru,Danbooru$" "/danbooru";
+"~^/Charity%25252520is%25252520not%25252520about%25252520helping$" "/charity";
+"~^/Beautifully-designed.*$" "/design";
+"~^/Archiving%25252520URLs$" "/archiving";
+"~^/review/Anime$" "/review/anime";
+"~^/twi$" "/twitter";
+"~^/backsto$" "/backstop";
+"~^/website$" "/index";
+"~^/doc/anime/eva/1996-animerica-conscience-otaking/$" "/doc/anime/eva/1996-animerica-conscience";
+"~^/doc/anime/eva/2011-house/$" "/doc/anime/eva/2011-house";
+"~^/doc/fi-ction/2011-gibson.html$" "/doc/fiction/science-fiction/2011-gibson.html";
+"~^/doc/genetics/psychiatry/2016-sekar\.pdf.*$" "/doc/genetics/editing/2016-sekar.pdf";
+"~^/doc/genetics/heritable/2016-sekar\.pdf.*$" "/doc/genetics/editing/2016-sekar.pdf";
+"~^/doc/genetics/2016-sekar$" "/doc/genetics/editing/2016-sekar.pdf";
+"~^/doc/biology/genetics/2016-sekar\.pdf.*$" "/doc/genetics/editing/2016-sekar.pdf";
+"~^/note/%EF%BF%BD$" "/doc/index";
+"~^/doc/iq/2014-shu$" "/doc/iq/2014-shulman.pdf";
+"~^/doc/iq.high/1947-terman-thegiftedchildgrowsup\.pdf.*$" "/doc/iq/high/1947-terman-thegiftedchildgrowsup.pdf";
+"~^/doc/iq/2018-gensowski.htt$" "/doc/iq/ses/2018-gensowski.pdf";
+"~^/doc/statistics/peer$" "/doc/statistics/peer-review/index";
+"~^/doc/modafinil/2013-06-reddit-modup-modvigilblisterpack-front.jpg$" "/doc/modafinil/2013-06-reddit-modup-modvigilblisterpack-front.png";
+"~^/doc/reinforcement-learning/preference-learni$" "/doc/reinforcement-learning/preference-learning/index";
+"~^/doc/rotten.com/libraty/index$" "/doc/rotten.com/library/index.html";
+"~^/doc/techno$" "/doc/technology/index";
+"~^/doc/technology/2005-shirky$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/fake$" "/fake-journal-club";
+"~^/Noteswhobuysfonts$" "/font";
+"~^/newsletter/2017/02/.*$" "/newsletter/2017/02";
+"~^/review/book//$" "/review/book";
+"~^/static/%C3%B0$" "/static/index";
+"~^/static/build/Inflation.hs/$" "/static/build/Inflation.hs";
+"~^/static/icon/$" "/static/img/icon/index";
+"~^/static/img/icon/arrow-hook-left$" "/static/img/icon/arrow-hook-left.svg";
+"~^/stressI$" "/stress";
+"~^/The-M$" "/subculture";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
